# application-services

./: Cargo.toml  DEPENDENCIES.md
.github/workflows/: cargo-update.yml
automation/: cargo-update-pr.py
components/fxa-client/: Cargo.toml
components/fxa-client/examples/: devices_api.rs
components/fxa-client/src/: error.rs
components/logins/: Cargo.toml
components/logins/examples/: sync_pass_sql.rs
components/logins/src/: db.rs  error.rs
components/places/: Cargo.toml
components/places/examples/: autocomplete.rs  check-coop-tx.rs  places-utils.rs
components/places/src/: error.rs  types.rs
components/places/src/history_sync/: store.rs
components/push/: Cargo.toml
components/push/src/: error.rs
components/support/rc_crypto/: Cargo.toml
components/support/rc_crypto/nss/: Cargo.toml
components/support/rc_crypto/nss/src/: error.rs
components/support/rc_crypto/src/: error.rs
components/sync15/: Cargo.toml
components/sync15/src/: coll_state.rs  error.rs
components/sync_manager/: Cargo.toml
components/sync_manager/src/: error.rs  manager.rs
components/tabs/: Cargo.toml
components/tabs/examples/: tabs_sync.rs
components/tabs/src/: error.rs
components/viaduct/: Cargo.toml
components/viaduct/src/: error.rs
components/webext-storage/: Cargo.toml
components/webext-storage/ffi/: Cargo.toml
components/webext-storage/src/: api.rs  db.rs  error.rs  store.rs
libs/: build-all.sh
megazords/full/: DEPENDENCIES.md
megazords/full/android/: dependency-licenses.xml
megazords/ios/: DEPENDENCIES.md
megazords/lockbox/: DEPENDENCIES.md
(+11 files in other folders)
