[package]
name = "rc_crypto"
version = "0.1.0"
authors = ["application-services@mozilla.com"]
edition = "2018"
license = "MPL-2.0"

[lib]
crate-type = ["lib"]

[dependencies]
base64 = "0.12"
thiserror = "1.0"

error-support = { path = "../error" }
nss = { path = "nss" }
libsqlite3-sys = { version = "0.18.0", features = ["bundled"] }
hawk = { version = "3.2", default-features = false, optional = true }
# Flip this to 0.2.0 before merging!!!! (once it's published)
ece = { git = "https://github.com/mozilla/rust-ece", default-features = false, features = ["serializable-keys"], optional = true }
backtrace = "0.3"

[dev-dependencies]
hex = "0.4"

[features]
default = []
gecko = []
